# aiosubprocess

./: .coveragerc  .gitignore  LICENSE  README.md  aiosubprocess.py  pyproject.toml  requirements-test.txt
.github/: FUNDING.yml
.github/workflows/: pythonapp.yml
aiosubprocess/: __init__.py  aiosubprocess.py
examples/: double_shell.py  ex1_minimal.py
tests/: conftest.py  test_all.py
